@@ -12,7 +12,8 @@ fread = function(input="test.csv",sep="auto",sep2="auto",nrows=-1,header="auto",
     if (!is.null(na.strings) && !is.character(na.strings)) stop("'na.strings' is type '",typeof(na.strings),"'. Must be a character vector.")
     if (!is.numeric(nrows) || length(nrows)!=1) stop("'nrows' must be a length 1 vector of type numeric or integer")
     if (!is.numeric(autostart) || length(autostart)!=1 || autostart<1) stop("'autostart' must be a length 1 vector of type numeric or integer, >=1")
-    ans = .Call(Creadfile,input,as.integer(nrows),header,na.strings,verbose,as.integer(autostart))
+    if (identical(sep,"auto")) sep=NULL else if (!is.character(sep) || length(sep)!=1 || nchar(sep)!=1) stop("'sep' must be 'auto' or a single character")
+    ans = .Call(Creadfile,input,sep,as.integer(nrows),header,na.strings,verbose,as.integer(autostart))
     nr = length(ans[[1]])
     setattr(ans,"row.names",.set_row_names(nr))
     setattr(ans,"class",c("data.table","data.frame"))
