@@ -1,5 +1,7 @@
 
-PKG_CFLAGS=-O3 -mtune=native
+MAKEFLAGS="CFLAGS=-O3"
+CFLAGS=-O3
+PKG_CFLAGS=-O3
 
 all: $(SHLIB)
 	mv $(SHLIB) datatable$(SHLIB_EXT)
